<resources>

    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>


    <string name="send">Send Courier</string>
    <string name="carry">Carry Courier</string>
    <string name="history">History</string>
    <string name="share">Share</string>
    <string name="notifications">My Notification</string>
    <string name="contactUs">Contact Us</string>

    <string name="app_name">Free Courier</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_simple_login">Login</string>

    <string name="action_signup">Register</string>
    <string name="action_logout">Logout</string>



    <string name="title_activity_signup__page">Free Courier</string>
    <string name="Signup_button">Sign Up</string>
    <string name="Register_username_box">Email (Username)</string>
    <string name="Signup_text">Create Account</string>
    <string name="Signup_passfield">Password</string>
    <string name="Signup_name">Full Name</string>
    <string name="Signup_repass">Re Enter Password</string>
    <string name="Signup_mobileNo">Enter 10 Digit Mobile Number</string>
    <string name="Signup_aggrement">By Continuing, I Agree to FreeCourier\'s</string>
    <string name="Signup_aggrement_link">User Agreement and Terms of Service</string>
    <string name="Login_button">Login</string>
    <string name="title_activity_signup">Signin</string>
    <string name="sign_in_email">Email(Username)</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="title_activity_main__navigation">Free Courier</string>

    <string name="title_section1">Send Courier</string>
    <string name="title_section2">Carry Courier</string>

    <string name="title_section3">History</string>
    <string name="title_section4">Share Free Courier</string>
    <string name="title_section5">My Notifications</string>
    <string name="title_section6">Contact Us</string>





    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--string name="action_example">Example action</string-->
    <string name="simple_login">Login</string>
    <string name="title_activity_navigation_main">Welcome</string>

    <string name="action_example">Example action</string>
    <string name="send_fragment_title">SEND</string>
    <string name="carry_fragment_title">CARRY</string>
    <string name="receive_fragment_title">RECEIVE</string>
    <string name="share_fragment_title">SHARE</string>
    <string name="contact_fragment_title">CONTACT US</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="date">dd/mm/yy</string>
    <string name="send_button">Submit</string>
    <string name="carry_button">Submit</string>
    <string name="Date">Date of Journey</string>
    <string name="sender_list">SENDER LIST</string>
    <string name="treaveller_list">TRAVELLER</string>
    <string name="Registration_button">Sign Up</string>
    <string name="gender_female" >Female</string>
    <string name="gender_male" >Male</string>
    <string name="title_activity_traveller_activity">Travellers</string>

    <string name="title_activity_traveller_details">Traveller Details</string>
    <string name="travellerDetails_title">TRAVELLER DETAILS</string>
    <string name="ttd_select">Select</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_main_activity">Free Courier</string>
</resources>
