<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <Spinner
        android:layout_width="100dp"

        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginTop="106dp"

        android:layout_below="@+id/textView"
        android:layout_toLeftOf="@+id/button"
        android:layout_toStartOf="@+id/button" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_alignTop="@+id/spinner"
        android:layout_toEndOf="@+id/button" />

    <ImageButton
        android:src="@mipmap/calendar"
        android:layout_width="wrap_content"
        android:id="@+id/newbutton"
        android:clickable="true"
        android:onClick="clickNew"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />


    <ImageButton
        android:src="@mipmap/clock"
        android:layout_width="wrap_content"
        android:id="@+id/newbutton1"
        android:clickable="true"
        android:onClick="clickNew"
        android:layout_height="wrap_content"
        android:background="@null"

        android:layout_alignTop="@+id/newbutton"
        android:layout_alignLeft="@+id/spinner2"
        android:layout_alignStart="@+id/spinner2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destination"
        android:id="@+id/textView3"
        android:layout_above="@+id/spinner2"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/source"
        android:id="@+id/textView2"
        android:layout_above="@+id/spinner2"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="65dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:id="@+id/button"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Time"
        android:id="@+id/get_time"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/newbutton1"
        android:layout_alignRight="@+id/newbutton1"
        android:layout_alignEnd="@+id/newbutton1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Date"
        android:id="@+id/get_date"
        android:layout_alignTop="@+id/get_time"
        android:layout_alignLeft="@+id/newbutton"
        android:layout_alignStart="@+id/newbutton" />

</RelativeLayout>